--- a/docs/999_nikola_install.org
+++ b/docs/999_nikola_install.org
@@ -1,6 +1,8 @@
 * First post on Nikola
 Thanks and comments on how to install static website generator. [[https://streakycobra.github.io/posts/blogging-in-org-mode-with-nikola/][Blogging in Org Mode With Nikola]]
 
+* Modify Python File for org Mode
+
 when this was mentionned
 
 #+BEGIN_SRC python
@@ -15,3 +17,5 @@ PAGES = PAGES + (("stories/*.org", "stories", "story.tmpl"),)
 I thought that it was about things in the emacs file. Finally it was
 about things in the conf.py file. So search the posts and search the
 compilers and add them into the conf.py file. Don't forget to commit.
+
+* 
