--- a/docs/999_nikola/999_nikola_install.org
+++ b/docs/999_nikola/999_nikola_install.org
@@ -27,12 +27,12 @@ compilers and add them into the conf.py file. Don't forget to commit.
 ** Error picture
 [[file:https://github.com/nocaoper/949_hiv_2017/raw/master/docs/999_nikola/pictureNoLocaleConfigured.png]]
 ** solution: [[https://askubuntu.com/questions/162391/how-do-i-fix-my-locale-issue][Article set locale (askubuntu.com)]]
-$ locale
+- $ locale
 to check all the locales configured on ubuntu
 
-sudo locale-gen "en_US.UTF-8"
-sudo dpkg-reconfigure locales
-* Adding a picture
+- sudo locale-gen "en_US.UTF-8"
+- sudo dpkg-reconfigure locales
+* Adding a picture to orgmode
 ** from
 [[http://pragmaticemacs.com/emacs/org-mode-basics-iii-add-links-and-images-to-you-notes/][article insert images]]
 #+BEGIN_SRC text
