--- a/docs/999_nikola/999_nikola_install.org
+++ b/docs/999_nikola/999_nikola_install.org
@@ -24,14 +24,27 @@ compilers and add them into the conf.py file. Don't forget to commit.
 #+BEGIN_SRC sh
   nikola new_post 999_nikola_install.org
 #+END_SRC
+
 ** Error picture
 [[file:https://github.com/nocaoper/949_hiv_2017/raw/master/docs/999_nikola/pictureNoLocaleConfigured.png]]
+
 ** solution: [[https://askubuntu.com/questions/162391/how-do-i-fix-my-locale-issue][Article set locale (askubuntu.com)]]
 - $ locale
 to check all the locales configured on ubuntu
 
-- sudo locale-gen "en_US.UTF-8"
-- sudo dpkg-reconfigure locales
+- $ sudo locale-gen "en_US.UTF-8"
+- $ sudo dpkg-reconfigure locales
+  - From the list I search for en_US.UTF-8, which happens to be number 149
+  - I type 149 and press enter
+  - The command prompt asks me to choose between
+    - None
+    - C.UTF-8
+    - en_US.UTF-8
+  - I choose C.UTF8
+  - I rerun the command
+    - nikola new_post 999_nikola_install.org
+    - it works!
+
 * Adding a picture to orgmode
 ** from
 [[http://pragmaticemacs.com/emacs/org-mode-basics-iii-add-links-and-images-to-you-notes/][article insert images]]
