--- a/posts/999_orgmode_with_nicola/orgmode-with-nikola.org
+++ b/posts/999_orgmode_with_nicola/orgmode-with-nikola.org
@@ -104,7 +104,7 @@ compilers and add them into the conf.py file. Don't forget to commit.
 #+END_SRC
 
 ** Error picture
-[[file:https://github.com/nocaoper/949_hiv_2017/raw/master/docs/999_nikola/pictureNoLocaleConfigured.png]]
+[[file:https:/github.com/nocaoper/949_hiv_2017/raw/master/posts/999_orgmode_with_nicola/pictureNoLocaleConfigured.png][ImageErreur]]
 
 ** solution: [[https://askubuntu.com/questions/162391/how-do-i-fix-my-locale-issue][Article set locale (askubuntu.com)]]
 - $ locale
@@ -132,7 +132,9 @@ to check all the locales configured on ubuntu
 #+END_SRC
 * Generating post
 - type following command
+#+BEGIN_SRC sh
 $ nikola new_post -e -f orgmode
+#+END_SRC
 - quit editor
 - cd into the post folder
 - use emacs to add orgmode stuff to the file
